--- a/package.json
+++ b/package.json
@@ -32,5 +32,18 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Wilvelzap/mvp-guira.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Wilvelzap/mvp-guira/issues"
+  },
+  "homepage": "https://github.com/Wilvelzap/mvp-guira#readme"
 }
